--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 			</section><div id="scroll" class="content"><h1 id="designing-for-many-platforms" style="text-align: center; color: limegreen;">Skills</h1>
 
 <h3 style="color: #8256FB">Front-End</h3>
-<p>&#8226; Web application development: HTML, DOM, CSS, JavaScript (ES6)</p>
+<p>&#8226; Web application development: HTML, DOM, CSS, JavaScript, AJAX, JSON.</p>
 <p>&#8226; CSS frameworks & preprocessors: Bootstrap, Sass. </p>
 <p>&#8226; JavaScript libraries, frameworks & builder tool: React, jQuery, VueJS, Angular, Gulp, Grunt.</p>
-<p>&#8226; AJAX </p>
+<p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision.</p>
 
 <h3 style="color: #FD7246">Back-End</h3>
 <p>&#8226; RESTful API design & development.</p>
