--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 <h3 style="color: #8256FB">Front-End</h3>
 <p>&#8226; Web application development: HTML, DOM, CSS, JavaScript, AJAX, JSON.</p>
 <p>&#8226; CSS frameworks & preprocessors: Bootstrap, Sass. </p>
-<p>&#8226; JavaScript libraries, frameworks & builder tool: React, jQuery, VueJS, Angular, Gulp, Grunt.</p>
-<p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision.</p>
+<p>&#8226; JavaScript libraries, frameworks & builder tools: React, jQuery, VueJS, Angular, Gulp, Grunt.</p>
+<p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision, Zeplin.</p>
 
 <h3 style="color: #FD7246">Back-End</h3>
 <p>&#8226; RESTful API design & development.</p>
@@ -142,7 +142,7 @@
 <p>&#8226; Frameworks: Express.js.</p>
 <p>&#8226; Cloud deployments: AWS, Azure, Google Cloud.</p>
 <p>&#8226; Others: Git, Github, Bitbucket, NPM, Yarn, Babel, Webpack.</p>
-<p>&#8226; Exposure to agile development methodologies and familiarity with scrum planning tools (e.g. Jira, Confluence).</p>
+<p>&#8226; Exposure to agile development methodologies and familiarity with scrum planning tools (e.g. Jira, Confluence), Wordpress, Drupal.</p>
 </div>
 
 <!-- Filter Columns -->
