--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<div class="header-image"></div>
 				</div>
 			      <div class="header-details-container" self="size-xsmall center">
-					  <h1 style="color: #D73D7E;">I'm Khoa</h1>
+					  <h1 style="color: #ff0971;">I'm Khoa</h1>
 					  <p>I'm a Full-Stack Software/Web Application Engineer & UI/graphic designer based in Dallas, Texas.</p>
 					  
 					  <a href="#" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">Download My Resume</button></a>	  
