--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="A software engineer/website developer">
 	<meta property="og:url" content="/devices">
-	<meta property="og:image" content="http://facebook.design/public/images/resource_devices_share.png">
+	<meta property="og:image" content="https://facebook.design/public/images/resource_devices_share.png">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="/devices">
 	<meta name="twitter:title" content="Khoa Nguyen &mdash; Software engineer">
 	<meta name="twitter:description" content="A software engineer/website developer.">
-	<meta name="twitter:image" content="http://facebook.design/public/images/resource_devices_share.png">
+	<meta name="twitter:image" content="https://facebook.design/public/images/resource_devices_share.png">
 	<meta name="twitter:site" content="@kdncode">
 	<link href="https://facebook.design/feed.xml" type="application/rss+xml" rel="alternate" title="Feed of Recent Posts" />
 	<link rel="stylesheet" type="text/css" href="css/global.css">
@@ -187,7 +187,7 @@
 <div class="related_posts-container">
     <div layout="rows center-spread">
 
-        <a href="http://bit.do/NodeWeather" target="_blank">
+        <a href="https://bit.do/NodeWeather" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Weather-API-Nodejs.png)">
@@ -209,7 +209,7 @@
 
         </a>
 
-        <a href="http://bit.do/untvets" target="_blank">
+        <a href="https://bit.do/untvets" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Help-Veteran.png)">
@@ -253,7 +253,7 @@
 
         </a>
 
-        <a href="http://bit.do/iOS-Quiz" target="_blank">
+        <a href="https://bit.do/iOS-Quiz" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/iOS-Quiz-App.png)">
@@ -275,7 +275,7 @@
 
         </a>
 
-        <a href="http://bit.do/iOS-Calculator" target="_blank">
+        <a href="https://bit.do/iOS-Calculator" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/iOS-Calculator-App.png)">
@@ -297,7 +297,7 @@
 
         </a>
 
-        <a href="http://bit.do/AirBnB-Redesign" target="_blank">
+        <a href="https://bit.do/AirBnB-Redesign" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/AirBNB-ReDesign.png)">
@@ -320,7 +320,7 @@
         </a>
 
 
-        <a href="http://bit.do/Adidas-Redesign" target="_blank">
+        <a href="https://bit.do/Adidas-Redesign" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Adidas-Redesign.png)">
@@ -343,7 +343,7 @@
         </a>
 
         
-        <a href="http://bit.do/fidelity-women" target="_blank">
+        <a href="https://bit.do/fidelity-women" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Fidelity-Women.png)">
@@ -365,7 +365,7 @@
 
         </a>
 
-        <a href="http://bit.do/fidelity-susan" target="_blank">
+        <a href="https://bit.do/fidelity-susan" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Fidelity-Women-Card.png)">
@@ -387,7 +387,7 @@
 
         </a>
 
-        <a href="http://bit.do/unt-spaceship" target="_blank">
+        <a href="https://bit.do/unt-spaceship" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/UNT-Spaceship-Mobile.png)">
@@ -409,7 +409,7 @@
 
         </a>
 
-        <a href="http://bit.do/ECommerce-wireframe" target="_blank">
+        <a href="https://bit.do/ECommerce-wireframe" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Ecommerce-WireFrame.png)">
@@ -484,11 +484,11 @@ $(function(){
 	<div id="footer-links" self="right">
 		<ul>
 			<a href="mailto:kdncode@gmail.com" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');"><li class="fa fa-envelope"></li></a>
-			<a href="http://bit.do/git-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-github"></li></a>
+			<a href="https://bit.do/git-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-github"></li></a>
 			<a href="http://bit.do/linkedin-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-linkedin"></li></a>
-			<!-- <a href="http://bit.do/twitter-kdncode" onClick="ga('send', 'event', 'Twitter', 'clicks', 'Footer');" target="_blank"><li class="fa fa-twitter"></li></a> -->
-			<a href="http://bit.do/dribbble-kdncode" onClick="ga('send', 'event', 'Dribbble', 'clicks', 'Footer');" target="_blank"><li class="fa fa-dribbble"></li></a>
-			<a href="http://bit.do/behance-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-behance"></li></a>
+			<!-- <a href="https://bit.do/twitter-kdncode" onClick="ga('send', 'event', 'Twitter', 'clicks', 'Footer');" target="_blank"><li class="fa fa-twitter"></li></a> -->
+			<a href="https://bit.do/dribbble-kdncode" onClick="ga('send', 'event', 'Dribbble', 'clicks', 'Footer');" target="_blank"><li class="fa fa-dribbble"></li></a>
+			<a href="https://bit.do/behance-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-behance"></li></a>
 
 		</ul>
 	</div>
