--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
 <!-- Add Active Navigation Class Based on URL -->
 
 
-<script src="js/devices.js"></script>
+//<script src="https://imkhoa.com/js/devices.js"></script>
 <style>.header-image { background-image:url(https://facebook.design/public/images/devices_header.png);}</style>
-<script>
+//<script>
 $(function(){
     var bgimage = new Image();      
     bgimage.src="https://facebook.design/public/images/devices_header.png";       
