--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="google-site-verification" content="4LVpDW591jkJmcnp8SemsZaOidwClzUL6bPHZytwbQc" />
 	<title>Khoa Nguyen | Portfolio</title>
 	<meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
 	<meta name="author" content="Khoa Nguyen." />
