--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Khoa Nguyen | Portfolio</title>
 	<meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
 	<meta name="author" content="Khoa Nguyen." />
-	<meta name="keywords" content="Khoa Nguyen, engineer, software, developer, website, application, resume, portfolio, designer, UI/UX">
+	<meta name="keywords" content="Khoa Nguyen, imkhoa, iam khoa, i'm khoa, engineer, software, developer, website, application, resume, portfolio, designer, UI/UX">
 	<meta name="description" content="Khoa Nguyen's portfolio - Software engineer.">
 	<meta property="og:site_name" content="Khoa Nguyen &mdash; Software engineer">
 	<meta property="og:title" content="Khoa Nguyen &mdash; Software engineer">
