--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ $(function(){
 		<ul>
 			<a href="mailto:kdncode@gmail.com" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');"><li class="fa fa-envelope"></li></a>
 			<a href="https://bit.do/git-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-github"></li></a>
-			<a href="https://bit.do/linkedin-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-linkedin"></li></a>
+			<a href="https://bit.do/linkedin-iamkhoa" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-linkedin"></li></a>
 			<!-- <a href="https://bit.do/twitter-kdncode" onClick="ga('send', 'event', 'Twitter', 'clicks', 'Footer');" target="_blank"><li class="fa fa-twitter"></li></a> -->
 			<a href="https://bit.do/dribbble-kdncode" onClick="ga('send', 'event', 'Dribbble', 'clicks', 'Footer');" target="_blank"><li class="fa fa-dribbble"></li></a>
 			<a href="https://bit.do/behance-kdncode" onClick="ga('send', 'event', 'Github', 'clicks', 'Footer');" target="_blank"><li class="fa fa-behance"></li></a>
