--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					  <p>I'm a Full-Stack Software/Web Application Engineer & UI/graphic designer based in Dallas, Texas.</p>
 					  
 					  <a href="#" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">Download My Resume</button></a>	  
-					  <p class="header-disclaimer">Updated March 30th, 2018 · <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a></p>
+					  <p class="header-disclaimer">Updated March 30th, 2018</p> · <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
 			      </div>
 			    </div>
 				<div class="action_bar-wrapper" self="bottom">
