--- a/index.html
+++ b/index.html
@@ -133,20 +133,17 @@
 			</section><div id="scroll" class="content"><h1 id="designing-for-many-platforms" style="text-align: center; color: limegreen;">Skills</h1>
 
 <h3 style="color: #8256FB">Front-End</h3>
-<p>&#8226; Web application development: HTML, DOM, CSS, JavaScript, AJAX, JSON.</p>
-<p>&#8226; CSS frameworks & preprocessors: Bootstrap, Sass. </p>
-<p>&#8226; JavaScript libraries, frameworks & builder tools: React, jQuery, VueJS, Angular, Gulp, Grunt.</p>
+<p>&#8226; JavaScript, HTML, CSS, Bootstrap, Sass, AJAX, JSON.</p>
+<p>&#8226; ReactJs, jQuery, Gulp, Babel, Webpack. </p>
 <p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision, Zeplin.</p>
 
 <h3 style="color: #FD7246">Back-End</h3>
-<p>&#8226; RESTful API design & development.</p>
-<p>&#8226; Web server technologies: Node.js, Apache.</p>
-<p>&#8226; Server-side languages: .NET, JavaScript, Java.</p>
-<p>&#8226; Database: MongoDB, MySQL, MS SQL Server.</p>
-<p>&#8226; Frameworks: Express.js.</p>
-<p>&#8226; Cloud deployments: AWS, Azure, Google Cloud.</p>
-<p>&#8226; Others: Git, Github, Bitbucket, NPM, Yarn, Babel, Webpack.</p>
-<p>&#8226; Exposure to agile development methodologies and familiarity with scrum planning tools (e.g. Jira, Confluence), Wordpress, Drupal.</p>
+<p>&#8226; Node.Js, Express.js, Java, C#, ASP.NET</p>
+<p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
+<p>&#8226; Heroku, AWS, Azure, Google Cloud.</p>
+<p>&#8226; RESTful API design, routes & development.</p>
+<p>&#8226; Git, Github, Bitbucket, NPM, Yarn, Wordpress, Drupal.</p>
+<p>&#8226; Agile development methodologies & scrum planning tools: Jira, Confluence.</p>
 </div>
 
 <!-- Filter Columns -->
