--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <h3 style="color: #FD7246">Back-End</h3>
 <p>&#8226; Node.Js, Express.js, Java, C#, ASP.NET</p>
 <p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
-<p>&#8226; Heroku, AWS, Azure, Google Cloud.</p>
+<p>&#8226; Heroku, AWS, Azure, Salesforce Commerce Cloud.</p>
 <p>&#8226; RESTful API design, routes & development.</p>
 <p>&#8226; Git, Github, Bitbucket, NPM, Yarn, Wordpress, Drupal.</p>
 <p>&#8226; Agile development methodologies & scrum planning tools: Jira, Confluence.</p>
