--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					  <h1 style="color: #ff0971;">I'm Khoa</h1>
 					  <p>I'm a Full-Stack Software/Web Application Engineer & UI/graphic designer based in Dallas, Texas.</p>
 					  
-					  <a href="#" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">Download My Resume</button></a>	  
+					  <a href="http://bit.do/engineer-resume" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">Download My Resume</button></a>	  
 					  <p class="header-disclaimer">Updated March 30th, 2018 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
 			      </div>
 			    </div>
