--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					  <p>I'm a Full-Stack Software/Web Application Engineer & UI/graphic designer based in Dallas, Texas.</p>
 					  
 					  <a href="https://bit.do/engineer-resume" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">View/Download My Resume</button></a>	  
-					  <p class="header-disclaimer">Updated April 24th, 2018 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
+					  <p class="header-disclaimer">Updated May 22nd, 2018 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
 			      </div>
 			    </div>
 				<div class="action_bar-wrapper" self="bottom">
@@ -133,16 +133,16 @@
 			</section><div id="scroll" class="content"><h1 id="designing-for-many-platforms" style="text-align: center; color: limegreen;">Skills</h1>
 
 <h3 style="color: #8256FB">Front-End</h3>
-<p>&#8226; JavaScript, HTML, CSS, Bootstrap, Sass, AJAX, JSON.</p>
+<p>&#8226; JavaScript ES6, Typescript, HTML, CSS, Bootstrap, Sass, AJAX, JSON.</p>
 <p>&#8226; ReactJs, jQuery, Gulp, Babel, Webpack. </p>
 <p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision, Zeplin.</p>
 
 <h3 style="color: #FD7246">Back-End</h3>
 <p>&#8226; Node.Js, Express.js, Socket.IO, Java, C#, ASP.NET</p>
 <p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
-<p>&#8226; Heroku, AWS, Azure, Salesforce Commerce Cloud.</p>
+<p>&#8226; Heroku, AWS, Azure.</p>
 <p>&#8226; RESTful API design, routes & development.</p>
-<p>&#8226; Git, Github, Bitbucket, NPM, Yarn, Wordpress, Drupal.</p>
+<p>&#8226; Jest testing, Git, Github, Bitbucket, NPM, Yarn, Wordpress, Drupal.</p>
 <p>&#8226; Agile development methodologies & scrum planning tools: Jira, Confluence.</p>
 </div>
 
