--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <div class="related_posts-container">
     <div layout="rows center-spread">
 
-        <a href="https://bit.do/NodeWeather" target="_blank">
+        <a href="https://yourcityweather.herokuapp.com/" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Weather-API-Nodejs.png)">
@@ -209,7 +209,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/untvets" target="_blank">
+        <a href="https://github.com/kdncode/vets" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Help-Veteran.png)">
@@ -230,10 +230,11 @@
             </div>
         </a>
 
-        <a href="#">
+        <a href="https://www.behance.net/gallery/66166053/Cisco-re-design" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
-                <div class="card-hero" style="background-image: url(images/CSS-ZenGarden.png)">
+<!--                 <div class="card-hero" style="background-image: url(images/CSS-ZenGarden.png)"> -->
+		    <div class="card-hero" style="background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/27d00866166053.5b0d3119ba33b.png)">
                 </div>
                 <div class="card-body">
                     <div class="card-title">CSS ZenGarden</div>
@@ -251,7 +252,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/iOS-Quiz" target="_blank">
+        <a href="https://github.com/kdncode/iOS-Quiz" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/iOS-Quiz-App.png)">
@@ -272,7 +273,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/iOS-Calculator" target="_blank">
+        <a href="https://github.com/kdncode/iOS-Calculator" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/iOS-Calculator-App.png)">
@@ -293,7 +294,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/AirBnB-Redesign" target="_blank">
+        <a href="https://www.behance.net/gallery/58771103/AirBnB-redesign" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/AirBNB-ReDesign.png)">
@@ -315,7 +316,7 @@
         </a>
 
 
-        <a href="https://bit.do/Adidas-Redesign" target="_blank">
+        <a href="https://www.behance.net/gallery/63659335/Adidas-Redesign" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Adidas-Redesign.png)">
@@ -337,7 +338,7 @@
         </a>
 
         
-        <a href="https://bit.do/fidelity-women" target="_blank">
+        <a href="https://www.behance.net/gallery/58644905/Fidelity-Women-Investing-(Gradient-ver)" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Fidelity-Women.png)">
@@ -358,7 +359,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/fidelity-susan" target="_blank">
+        <a href="https://www.behance.net/gallery/58644865/Fidelity-x-Susan-G-Komen-Credit-Card" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Fidelity-Women-Card.png)">
@@ -379,7 +380,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/unt-spaceship" target="_blank">
+        <a href="https://www.behance.net/gallery/47682757/Spaceship-LoginSignup-Pages" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/UNT-Spaceship-Mobile.png)">
@@ -400,7 +401,7 @@
             </div>
         </a>
 
-        <a href="https://bit.do/ECommerce-wireframe" target="_blank">
+        <a href="https://www.behance.net/gallery/50665733/E-Commerce-wireframe-website" target="_blank">
             <div class="card card--resource not-visible">
                 <!--Resource-->
                 <div class="card-hero" style="background-image: url(images/Ecommerce-WireFrame.png)">
