--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		    <div class="card-hero" style="background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/27d00866166053.5b0d3119ba33b.png)">
                 </div>
                 <div class="card-body">
-                    <div class="card-title">CSS ZenGarden</div>
+                    <div class="card-title">Cisco redesign</div>
                     <p class="card-description">Used HTML, CSS Grid System, Javascript, jQuery.</p>
                 </div>
                 <div class="card-footer">
