--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					  <h1 style="color: #ff0971;">I'm Khoa</h1>
 					  <p>I'm a Full-Stack | Software Engineer based in Dallas, Texas.</p>
 					  
-					  <a href="https://bit.do/engineer-resume" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">View/Download My Resume</button></a>	  
+					  <a href="https://drive.google.com/file/d/1fezu03IrgdhDaDmO8nb0VJUsndgz7nYu/view" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">View/Download My Resume</button></a>	  
 					  <p class="header-disclaimer">Updated May 22nd, 2018 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
 			      </div>
 			    </div>
