--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
 	<meta name="author" content="Khoa Nguyen." />
 	<meta name="keywords" content="Khoa Nguyen, imkhoa, iam khoa, i'm khoa, engineer, software, developer, website, application, resume, portfolio, designer, UI/UX">
-	<meta name="description" content="Khoa Nguyen's portfolio - Software engineer.">
-	<meta property="og:site_name" content="Khoa Nguyen &mdash; Software engineer">
-	<meta property="og:title" content="Khoa Nguyen &mdash; Software engineer">
+	<meta name="description" content="Khoa Nguyen's portfolio - Software Engineer.">
+	<meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
+	<meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="A software engineer/website developer">
 	<meta property="og:url" content="/devices">
