--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="google-site-verification" content="4LVpDW591jkJmcnp8SemsZaOidwClzUL6bPHZytwbQc" />
 	<title>Khoa Nguyen | Portfolio</title>
 	<meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
-	<meta name="author" content="Khoa Nguyen." />
+	<meta name="author" content="Khoa Nguyen" />
 	<meta name="keywords" content="Khoa Nguyen, imkhoa, iam khoa, i'm khoa, engineer, software, developer, website, application, resume, portfolio, designer, UI/UX">
 	<meta name="description" content="Khoa Nguyen's portfolio - Software Engineer.">
 	<meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
