--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision, Zeplin.</p>
 
 <h3 style="color: #FD7246">Back-End</h3>
-<p>&#8226; Node.Js, Express.js, Socket.IO, Java, C#, ASP.NET</p>
+<p>&#8226; Node.Js, Express.js, Socket.IO, Java, C#.</p>
 <p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
 <p>&#8226; Heroku, AWS, Azure.</p>
 <p>&#8226; RESTful API design, routes & development.</p>
