--- a/index.html
+++ b/index.html
@@ -132,18 +132,15 @@
 			    </div>
 			</section><div id="scroll" class="content"><h1 id="designing-for-many-platforms" style="text-align: center; color: limegreen;">Skills</h1>
 
-<h3 style="color: #8256FB">Front-End</h3>
-<p>&#8226; JavaScript ES6, Typescript, HTML, CSS, Bootstrap, Sass, AJAX, JSON.</p>
-<p>&#8226; ReactJs, jQuery, Gulp, Babel, Webpack. </p>
-<p>&#8226; Design Tools: Sketch App, Adobe XD, Photoshop, Illustrator, Invision, Zeplin.</p>
+<h3 style="color: #8256FB">Programming Languages</h3>
+<p>&#8226; Python, JavaScript/ES6, TypeScript, Java.</p>
 
-<h3 style="color: #FD7246">Back-End</h3>
-<p>&#8226; Node.Js, Express.js, Socket.IO, Java, C#.</p>
+<h3 style="color: #FD7246">Web Technology</h3>
+<p>&#8226; React, Node JS, Express JS, Socket.IO.</p>
+<p>&#8226; HTML, CSS, Bootstrap, Sass, AJAX, JSON, jQuery, Gulp, Babel, Webpack.</p>		
 <p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
+<p>&#8226; Git, Docker, Unix/Linux, Jest testing, Highcharts JS, Google Chart.</p>
 <p>&#8226; Heroku, AWS, Azure.</p>
-<p>&#8226; RESTful API design, routes & development.</p>
-<p>&#8226; Jest testing, Git, Github, Bitbucket, NPM, Yarn, Wordpress, Drupal.</p>
-<p>&#8226; Agile development methodologies & scrum planning tools: Jira, Confluence.</p>
 </div>
 
 <!-- Filter Columns -->
