--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <h3 style="color: #FD7246">Web Technology</h3>
 <p>&#8226; React, Node JS, Express JS, Socket.IO.</p>
-<p>&#8226; HTML, CSS, Bootstrap, Sass, AJAX, JSON, jQuery, Gulp, Babel, Webpack.</p>		
+<p>&#8226; HTML, CSS, Bootstrap, Sass, AJAX, JSON, jQuery, Gulp, Webpack.</p>		
 <p>&#8226; MongoDB, MySQL, MS SQL Server.</p>
 <p>&#8226; Git, Docker, Unix/Linux, Jest testing, Highcharts JS, Google Chart.</p>
 <p>&#8226; Heroku, AWS, Azure.</p>
