--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 				</div>
 			      <div class="header-details-container" self="size-xsmall center">
 					  <h1 style="color: #ff0971;">I'm Khoa</h1>
-					  <p>I'm a Full-Stack | Software Engineer based in Dallas, Texas.</p>
+					  <p>I'm a Full-Stack | Software Engineer based in the U.S.</p>
 					  
 					  <a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view" target="_blank" onClick="ga('send', 'event', 'Downloads', 'download', 'Download All Devices');"><button class="button button--active button--header">View/Download My Resume</button></a>	  
-					  <p class="header-disclaimer">Updated Feb, 2019 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
+					  <p class="header-disclaimer">Updated March, 2019 · </p>  <!-- <a href="#" onclick="javascript:popUp('#','Disclaimer','520','480');return false" class="small">Disclaimer</a> -->
 			      </div>
 			    </div>
 				<div class="action_bar-wrapper" self="bottom">
