--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 </script>
 
 <body>
-<div class="progress-bar" id="myBar"></div>
+<div class="progress-container">
+    <div class="progress-bar" id="myBar" style="height: 8px; width: 0%; position: fixed; padding-top: 70px; top: 0px; z-index: 1; background: linear-gradient(to right, rgb(255, 99, 121), rgb(144, 112, 253));"></div>
+  </div>
 <div id="nav" layout="row top-left">
 	<div self="left">
 		<a href="/"><div class="logo logo-isNotVisIfMobile"><img src="images/imkhoa-favicon.png" alt="">&nbsp;Khoa Nguyen</div></a>
