--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<li><a href="#news">Blogs</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
-						</div>
+                        </div>
 						<div class="social_icons_wrap">
 							<ul>
 								<li><a href="https://github.com/kdncode" target="_blank"><i class="xcon-google"></i></a></li>
@@ -102,7 +102,7 @@
 								<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
 								<!-- <li><a href="#"><i class="xcon-behance"></i></a></li> -->
 							</ul>
-						</div>
+                        </div>
 					</div>
 					<div class="edina_tm_trigger">
 						<div class="hamburger hamburger--collapse-r">
@@ -112,8 +112,11 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
+            </div>
+        </div>
+        <!-- PROGRESS BAR -->
+        <div class="progress-bar" id="myBar" style="height: .2px; width: 0%; position: fixed; padding-top: 5px; top: 82px; z-index: 1; background: linear-gradient(to right, rgb(255, 99, 121), rgb(144, 112, 253));"></div>
+
    		<div class="edina_tm_mobile_menu_wrap">
    			<div class="mob_menu">
 				<ul class="anchor_nav">
@@ -126,10 +129,10 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
-		</div>
+        </div>
     </header>
     <!-- /HEADER -->
-    
+      
     <!-- CONTENT -->
 	<div class="edina_tm_content">
 	
@@ -214,7 +217,8 @@
                         </div><br>
                         <div class="edina_tm_work_together_wrap">
                             <div class="invite wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
-                                <a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", target="_blank">View Resume</a>
+                                <a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
+                                id="my_btn" target="_blank">View Resume</a>
                             </div>
                         </div>
 					</div>
