--- a/index.html
+++ b/index.html
@@ -738,17 +738,17 @@
 				</div>
 				</div>
 				<div class="main_input_wrap">
-					<form action="/" method="post" class="contact_form" id="contact_form">
+					<form action="/modal/contact.php" method="post" class="contact_form" id="contact_form">
 						<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
 						<div class="empty_notice"><span>Please Fill Required Fields</span></div>
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.2s">
-							<input id="name" type="text" placeholder="Your Name">
+							<input id="name" type="text" placeholder="Your Name" required>
 						</div>
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
-							<input id="email" type="text" placeholder="Your Email">
+							<input id="email" type="email" placeholder="Your Email" required>
 						</div>
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s">
-							<textarea id="message" placeholder="Your Message"></textarea>
+							<textarea id="message" placeholder="Your Message" required></textarea>
 						</div>
 						<div class="edina_tm_button wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
 							<a id="send_message" href="#">Send Message</a>
