--- a/index.html
+++ b/index.html
@@ -738,8 +738,8 @@
 				</div>
 				</div>
 				<div class="main_input_wrap">
-					<form action="/modal/contact.php" method="post" class="contact_form" id="contact_form">
-						<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
+					<!-- <form action="/modal/contact.php" method="post" class="contact_form" id="contact_form"> -->
+						<!-- <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
 						<div class="empty_notice"><span>Please Fill Required Fields</span></div>
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.2s">
 							<input id="name" type="text" placeholder="Your Name" required>
@@ -749,11 +749,11 @@
 						</div>
 						<div class="wrap wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s">
 							<textarea id="message" placeholder="Your Message" required></textarea>
-						</div>
+						</div> -->
 						<div class="edina_tm_button wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
-							<a id="send_message" href="#">Send Message</a>
+							<a id="send_message" href="mailto:kdncode@gmail.com?Subject=Job%20opportunities" target="_top">Send Message</a>
 						</div>
-					</form>
+					<!-- </form> -->
 				</div>
 			</div>
 		</div>
