--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <!-- STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/plugins.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     <!--[if lt IE 9]> <script type="text/javascript" src="js/modernizr.custom.js"></script> <![endif]-->
     <!-- /STYLES -->
 
@@ -79,17 +80,17 @@
 			<div class="container">
 				<div class="navigation_inner">
 					<div class="logo">
-						<a class="dark_logo" href="https://imkhoa.com"><img src="img/logo/imkhoa-favicon.png" alt="" /></a>
+						<a class="dark_logo" href="/"><img src="img/logo/imkhoa-favicon.png" alt="Logo" /></a>
 					</div>
 					<div class="nav_list_wrap">
 						<div class="menu">
 							<ul class="anchor_nav">
-								<li><a href="#home">Home</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#services">Resume</a></li>
+								<!-- <li><a href="#home">Home</a></li> -->
+								<!-- <li><a href="#about">About</a></li> -->
+								<li><a href="#services">Skills</a></li>
 								<li><a href="#portfolio">Projects</a></li>
 								<!-- <li><a href="#testimonials">Testimonials</a></li> -->
-								<li><a href="#news">Blogs</a></li>
+								<!-- <li><a href="#news">Blogs</a></li> -->
 								<li><a href="#contact">Contact</a></li>
 							</ul>
                         </div>
@@ -118,12 +119,12 @@
    		<div class="edina_tm_mobile_menu_wrap">
    			<div class="mob_menu">
 				<ul class="anchor_nav">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#services">Resume</a></li>
+					<!-- <li><a href="#home">Home</a></li> -->
+					<!-- <li><a href="#about">About</a></li> -->
+					<li><a href="#services">Skills</a></li>
 					<li><a href="#portfolio">Projects</a></li>
 					<!-- <li><a href="#testimonials">Testimonials</a></li> -->
-					<li><a href="#news">Blogs</a></li>
+					<!-- <li><a href="#news">Blogs</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
@@ -137,26 +138,34 @@
 		<!-- HERO -->
 		<div class="edina_tm_section" id="home">
 			<div id="particles-js"></div>
-			<div class="edina_tm_hero_header">
-				<div class="edina_tm_universal_box_wrap">
-					<div class="bg_wrap">
-						<div class="overlay_video"> 
-                            <!-- https://www.youtube.com/watch?v=jnLSYfObARA -->
-							 <a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=v5bmGaLELCA',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:2, opacity:1, quality:'default'}"></a>
-						</div>
-						<div class="overlay_color video"></div>
-					</div>
-					<div class="content hero">
-						<div class="container hero">
-							<div class="hero_title homepage_third">
-								<h3>I'm Khoa Nguyen</h3>
-								<span>Software Engineer</span>
+				<div class="edina_tm_hero_header">
+					<div class="edina_tm_universal_box_wrap">
+						<div class="bg_wrap">
+							<div class="overlay_video"> 
+								<!-- https://www.youtube.com/watch?v=jnLSYfObARA -->
+								<a id="video" class="youtube-bg" data-property="{videoURL:'https://www.youtube.com/watch?v=v5bmGaLELCA',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:2, opacity:1, quality:'default'}"></a>
+							</div>
+							<div class="overlay_color video">
 							</div>
 						</div>
-						<div class="edina_tm_discover_wrap homepage_third anchor">
-							<span>
-								<a href="#about">Discover</a>
-							</span>
+						<div class="content hero">
+							<div class="container hero">
+								<div class="hero_title homepage_third">
+									<h3>Khoa Nguyen</h3>
+									<span>Software Engineer</span><br><br>
+									<div class="edina_tm_work_together_wrap">
+											<div class="invite wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
+												<a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
+												class="my_btn" target="_blank">Download Resume <i class="fas fa-download"></i></a>
+											</div>
+										</div>
+								</div>
+							</div>
+							<div class="edina_tm_discover_wrap homepage_third anchor">
+								<span>
+									<a href="#services">Discover</a>
+								</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -165,12 +174,12 @@
 		<!-- /HERO -->
 		
 		<!-- ABOUT -->
-		<div class="edina_tm_section" id="about">
+		<!-- <div class="edina_tm_section" id="about">
 			<div class="container">
 				<div class="edina_tm_main_title_holder_wrap about">
-					<!-- <div class="number_wrap">
+					<div class="number_wrap">
 						<span>01</span>
-					</div> -->
+					</div>
 					<div class="title_wrap">
 						<span>About Me</span>
 					</div>
@@ -199,7 +208,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- /ABOUT -->
 		
 		<!-- SERVICES -->
@@ -211,14 +220,14 @@
 							<span>02</span>
 						</div> -->
 						<div class="title_wrap">
-							<span>Resume</span>
-                        </div><br>
-                        <div class="edina_tm_work_together_wrap">
+							<span>Skills</span>
+                        </div>
+                        <!-- <div class="edina_tm_work_together_wrap">
                             <div class="invite wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
                                 <a href="https://drive.google.com/file/d/1ND0sJbTYcknCdJFpChmy4vuXJCdj_7Vx/view", 
-                                id="my_btn" target="_blank">View Resume</a>
+                                class="my_btn" target="_blank">Download Resume</a>
                             </div>
-                        </div>
+                        </div> -->
 					</div>
 					<div class="edina_tm_services_wrap">
 						<div class="edina_tm_list_wrap" data-column="3" data-space="70">
