--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 			<div class="container">
 				<div class="navigation_inner">
 					<div class="logo">
-						<a class="dark_logo" href="/"><img src="img/logo/imkhoa-favicon.png" alt="Logo" /></a>
+						<span style="font-size: 2.7em;">
+							<!-- <a class="dark_logo" href="/"><img src="img/logo/imkhoa-favicon.png" alt="Logo" /></a> -->
+							<a class="dark_logo" href="/" alt="Logo"><i class="fab fa-kickstarter-k my_logo"></i></a>
+						</span>
 					</div>
 					<div class="nav_list_wrap">
 						<div class="menu">
@@ -96,10 +99,9 @@
                         </div>
 						<div class="social_icons_wrap">
 							<ul>
-								<li><a href="https://github.com/kdncode" target="_blank"><i class="xcon-google"></i></a></li>
+								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
 								<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
-								<!-- <li><a href="#"><i class="xcon-behance"></i></a></li> -->
 							</ul>
                         </div>
 					</div>
@@ -128,7 +130,19 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
-        </div>
+			<div class="edina_tm_navigation_wrap">
+					<div class="social_icons_wrap" style="left: 20px; top: 270px;">
+							<ul>
+								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
+								<li><a href="https://twitter.com/kdncode" target="_blank"><i class="xcon-twitter"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+		</div>
+
+
     </header>
     <!-- /HEADER -->
       
@@ -685,7 +699,10 @@
 										<img src="img/partners/1.png" style="width: 100px; height: 100px;" alt="" />
 									</li>
 									<li class="item">
-										<img src="img/partners/2.png" style="width: 120px; height: 120px;" alt="" />
+										<span style="font-size: 48px; width: 500px; height: 500px; color: rgb(235, 88, 34);" alt="">
+											<i class="fab fa-wolf-pack-battalion"> LYONS</i>
+										<!-- <img src="img/partners/2.png" style="width: 120px; height: 120px;" alt="" /> -->
+										</span>
 									</li>
 									<li class="item">
 										<img src="img/partners/3.png" style="width: 120px; height: 60px;" alt="" />
