--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</ul>
 			</div>
 			<div class="edina_tm_navigation_wrap">
-					<div class="social_icons_wrap" style="left: 20px; top: 270px;">
+					<div class="social_icons_wrap" style="left: 20px; top: 75%;">
 							<ul>
 								<li><a href="https://github.com/kdncode" target="_blank"><i class="fab fa-github"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/imkhoa/" target="_blank"><i class="xcon-linkedin"></i></a></li>
