--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 					<div class="content partners">
 						<div class="container">
 							<div class="edina_tm_partners_wrap">
-                                <h2 style="color: #fff">Where I have been working</h2><br><br>
+                                <h2 style="color: #fff">Where I have worked</h2><br><br>
 								<ul class="owl-carousel">
 									<li class="item">
 										<img src="img/partners/1.png" style="width: 100px; height: 100px;" alt="" />
