--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/1.jpg">Real-Time Machine Learning Custom Object Detection</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">Python, Tensorflow, Darkflow, YOLO, OpenCV</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://github.com/kdncode/tensorFlow-react" target="_blank" ><span>Code</span></a>
@@ -389,7 +389,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/2.jpg">Amazon-Like Web App</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">Python, JavaScript, SQLite</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://github.com/kdncode/amazon-clone" target="_blank" ><span>Code</span></a>
@@ -407,7 +407,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/3.jpg">Twitter-Like Web App</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">Python, JavaScript, SQLite</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://github.com/kdncode/twitter-clone" target="_blank" ><span>Code</span></a>
@@ -425,7 +425,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/4.jpg">AirBnB-Like Web App</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">Reactjs, GoogleMap API</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://github.com/kdncode/react-airbnb" target="_blank" ><span>Code</span></a>
@@ -443,7 +443,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/5.jpg">E-Commerce Web for veterans | Grand Prize</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">C#, ASP NET, GoogleMap API</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://github.com/kdncode/vets" target="_blank" ><span>Code</span></a>
@@ -461,7 +461,7 @@
 								</div>
 								<div class="definition_portfolio">
 									<span class="first"><a class="zoom" href="img/portfolio/7.jpg">Weather Checker</a></span>
-                                    <!-- <span class="second">Category</span> -->
+                                    <span class="second">NodeJs, Openweather API</span>
                                     <div class="edina_tm_news_wrap">
                                         <div class="read_more">
                                             <a href="https://yourcityweather.herokuapp.com/" target="_blank" ><span>Demo</span></a>
